--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^3.5.3",
     "postcss-loader": "^3.0.0",
+    "file-loader": "^6.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@glidejs/glide": "^3.4.1"
+  }
 }
